--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   text-decoration: none;
+  color: #000;
 }
 
 .header {
@@ -22,16 +23,16 @@
 }
 
 .login-wrapper{
-  display: grid;
-  grid-template-columns: 70px 70px ;
-
+  align-items: center;
+  display: flex;
 }
 
-a {
-  color: #000;
+.login{
+  display: flex;
+  flex-direction: column;
+}
+.icon {
+  margin: 5px 5px 0px 0px;
 }
 
-.hr1 {
-  border: 0;
-  border-top: 1px solid #CCC;
-}
+
